# mlsynth

./: .gitignore  LIMITATIONS.md  NOTICE  README.md  REFERENCES.md  pyproject.toml
src/mlinflect/: __init__.py  nouns.py  pronouns.py  rules.py  types.py  verbs.py
src/mlsynth/: __init__.py  clitics.py  gender.py  nouns.py  rules.py  types.py
tests/: test_clitics.py  test_gender.py  test_nouns.py  test_plurals.py  test_pronouns.py  test_verbs.py
