[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlinflect"
version = "0.1.0"
description = "Rule-based Malayalam morphological synthesizer (noun and verb inflection generation)."
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Jayashankar R", email = "56070307+jayashankarvr@users.noreply.github.com" }]
keywords = ["malayalam", "morphology", "nlp", "inflection", "dravidian", "agglutinative", "synthesis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Linguistic",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/jayashankarvr/mlinflect"
Source = "https://github.com/jayashankarvr/mlinflect"
Issues = "https://github.com/jayashankarvr/mlinflect/issues"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.hatch.build.targets.wheel]
packages = ["src/mlinflect"]

[tool.pytest.ini_options]
testpaths = ["tests"]
